--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <html>
   <head>
-    <script defer src='/app.js'></script>
-    <link rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css' />
+    <script defer src="/app.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    />
+
+    <style>
+      .btn {
+        border-radius: 0%;
+      }
+    </style>
   </head>
   <body>
-    <div class = 'container'>
-      <div id='root'></div>
+    <div class="container">
+      <div id="root"></div>
     </div>
   </body>
 </html>
